service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-svc
  labels:
    name: redis-svc
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    name: redis
